# vault-recommender

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: conftest.py  test_cli.py  test_graph.py  test_indexer.py  test_mcp_server.py  test_parser.py  test_recommender.py  test_server.py
vault_recommender/: __init__.py  cli.py  graph.py  indexer.py  mcp_server.py  parser.py  recommender.py  server.py
