[project]
name = "vault-recommender"
version = "0.1.0"
description = "Semantic recommendation engine for Obsidian vaults — embeddings + wiki-link graph boosting with MCP server for Claude Code integration."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Joshua Oliphant" },
]
keywords = ["obsidian", "recommendation", "embeddings", "mcp", "knowledge-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "fastmcp>=3.1.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
]

[project.urls]
Homepage = "https://github.com/JoshuaOliphant/vault-recommender"
Repository = "https://github.com/JoshuaOliphant/vault-recommender"
Issues = "https://github.com/JoshuaOliphant/vault-recommender/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
vault-recommender = "vault_recommender.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
